--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "chalk": "^1.1.3",
     "co": "^4.6.0",
-    "node-fetch": "^1.5.3"
+    "request": "^2.72.0",
+    "request-promise": "^3.0.0"
   }
 }
